Project

General

Profile

Actions

Bug #10705

closed

JSON::ParserError#message is wrong encoding (ASCII-8BIT)

Bug #10705: JSON::ParserError#message is wrong encoding (ASCII-8BIT)

Added by josh.cheek (Josh Cheek) over 11 years ago. Updated about 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-01-06 trunk 49159) [x86_64-darwin13]
[ruby-core:67386]

Description

JSON::ParserError#message is wrong encoding (ASCII-8BIT). I would expect the error to be whatever the internal encoding is (in my case, utf8), perhaps inspecting the string in the error message such that all characters would be valid in that encoding.

Here is an example of where it becomes an issue:

# encoding: utf-8
require 'json'  # => true

json = JSON.dump("√")                                          # => "\"√\""
begin
  result = JSON.parse(json)
  puts "PARSED: #{result.inspect}"
rescue JSON::ParserError => e
  `ruby -v`                                                    # => "ruby 2.3.0dev (2015-01-06 trunk 49159) [x86_64-darwin13]\n"
  json.encoding                                                # => #<Encoding:UTF-8>
  e.message.encoding                                           # => #<Encoding:ASCII-8BIT>
  e.message                                                    # => "757: unexpected token at '\"\xE2\x88\x9A\"'"
  puts "Could not parse #{json.inspect} because #{e.message}"  # ~> Encoding::CompatibilityError: incompatible character encodings: UTF-8 and ASCII-8BIT
end

# ~> Encoding::CompatibilityError
# ~> incompatible character encodings: UTF-8 and ASCII-8BIT
# ~>
# ~> f9.rb:13:in `rescue in <main>'
# ~> f9.rb:5:in `<main>'

If the parsed string doesn't have a multibyte unicode character, it still happens, but fixes itself when it comes in contact with another string, since all its bytes are within the ASCII range.

Documented the actual use case and debugging here.

(side thought: should I open another bug since it generates invalid JSON?)

Updated by nobu (Nobuyoshi Nakada) over 11 years ago Actions #1

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

Applied in changeset r50342.


parser.rl: rb_enc_raise

Updated by usa (Usaku NAKAMURA) over 11 years ago Actions #2

  • Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN to 2.0.0: WONTFIX, 2.1: REQUIRED, 2.2: REQUIRED

Updated by usa (Usaku NAKAMURA) over 11 years ago Actions #3

  • Backport changed from 2.0.0: WONTFIX, 2.1: REQUIRED, 2.2: REQUIRED to 2.0.0: WONTFIX, 2.1: WONTFIX, 2.2: REQUIRED

memo:
I could write a patch for ruby_2_1, but could not make .c from .rl .

Updated by nobu (Nobuyoshi Nakada) over 11 years ago Actions #4

You could make ext/json/parser/parser.c by make srcs-ext, if you were have ragel command.

Updated by nagachika (Tomoyuki Chikanaga) about 11 years ago Actions #5

  • Backport changed from 2.0.0: WONTFIX, 2.1: WONTFIX, 2.2: REQUIRED to 2.0.0: WONTFIX, 2.1: WONTFIX, 2.2: DONE

r50339, r50340, r50342 and r50343 were backported into ruby_2_2 branch at r51571.

Actions

Also available in: PDF Atom